Fixing response with overlays
