# storage/api-docs/api-docs.json
@@ -6668,18 +6668,11 @@
                                     "$ref": "#/components/schemas/User"
                                 }
                             },
-                            "events": {
-                                "description": "A list of events the user is associated with.",
+                            "overlays": {
+                                "description": "A list of overlays associated with the current event.",
                                 "type": "array",
                                 "items": {
                                     "$ref": "#/components/schemas/EventOverlay"
-                                }
-                            },
-                            "overlays": {
-                                "description": "A list of competitions the user is associated with.",
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/components/schemas/Competition"
                                 }
                             }
                         },
